increase form labels sizes, fix spacings

--- a/smallslive/static/sass/components/_admin-forms.scss
+++ b/smallslive/static/sass/components/_admin-forms.scss
@@ -33,7 +33,7 @@
 
     & label {
       @include lato;
-      font-size: 12px;
+      font-size: 14px;
 
       & .required {
         @include lato-bold;
