--- a/smallslive/static/sass/dashboard/_form-elements.scss
+++ b/smallslive/static/sass/dashboard/_form-elements.scss
@@ -1,6 +1,6 @@
 label {
   @include lato;
-  font-size: 12px;
+  font-size: 14px;
   color: #1f1f1f;
 }
 
